Beaulieu_Duron_COMP/src/VSLParser.java
// $ANTLR 3.5.2 ./src/VSLParser.g 2016-11-01 17:54:58

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class VSLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASCII", "ASSIGN_KW", "COM", "COMMENT", 
		"DIGIT", "DIV", "DO_KW", "ELSE_KW", "FI_KW", "FUNC_KW", "IDENT", "IF_KW", 
		"INTEGER", "INT_KW", "LB", "LC", "LETTER", "LP", "MINUS", "MUL", "OD_KW", 
		"PLUS", "PRINT_KW", "PROTO_KW", "RB", "RC", "READ_KW", "RETURN_KW", "RP", 
		"TEXT", "THEN_KW", "VOID_KW", "WHILE_KW", "WS", "ARDECL", "ARELEM", "ARRAY", 
		"BLOCK", "BODY", "DECL", "FCALL", "FCALL_S", "INST", "NEGAT", "PARAM", 
		"PROG"
	};
	public static final int EOF=-1;
	public static final int ASCII=4;
	public static final int ASSIGN_KW=5;
	public static final int COM=6;
	public static final int COMMENT=7;
	public static final int DIGIT=8;
	public static final int DIV=9;
	public static final int DO_KW=10;
	public static final int ELSE_KW=11;
	public static final int FI_KW=12;
	public static final int FUNC_KW=13;
	public static final int IDENT=14;
	public static final int IF_KW=15;
	public static final int INTEGER=16;
	public static final int INT_KW=17;
	public static final int LB=18;
	public static final int LC=19;
	public static final int LETTER=20;
	public static final int LP=21;
	public static final int MINUS=22;
	public static final int MUL=23;
	public static final int OD_KW=24;
	public static final int PLUS=25;
	public static final int PRINT_KW=26;
	public static final int PROTO_KW=27;
	public static final int RB=28;
	public static final int RC=29;
	public static final int READ_KW=30;
	public static final int RETURN_KW=31;
	public static final int RP=32;
	public static final int TEXT=33;
	public static final int THEN_KW=34;
	public static final int VOID_KW=35;
	public static final int WHILE_KW=36;
	public static final int WS=37;
	public static final int ARDECL=38;
	public static final int ARELEM=39;
	public static final int ARRAY=40;
	public static final int BLOCK=41;
	public static final int BODY=42;
	public static final int DECL=43;
	public static final int FCALL=44;
	public static final int FCALL_S=45;
	public static final int INST=46;
	public static final int NEGAT=47;
	public static final int PARAM=48;
	public static final int PROG=49;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public VSLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public VSLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return VSLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "./src/VSLParser.g"; }


	public static class s_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "s"
	// ./src/VSLParser.g:15:1: s : program ;
	public final VSLParser.s_return s() throws RecognitionException {
		VSLParser.s_return retval = new VSLParser.s_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope program1 =null;


		try {
			// ./src/VSLParser.g:16:5: ( program )
			// ./src/VSLParser.g:16:7: program
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_program_in_s95);
			program1=program();
			state._fsp--;

			adaptor.addChild(root_0, program1.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "s"


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// ./src/VSLParser.g:19:1: program : ( unit )+ -> ^( PROG ( unit )+ ) ;
	public final VSLParser.program_return program() throws RecognitionException {
		VSLParser.program_return retval = new VSLParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope unit2 =null;

		RewriteRuleSubtreeStream stream_unit=new RewriteRuleSubtreeStream(adaptor,"rule unit");

		try {
			// ./src/VSLParser.g:20:5: ( ( unit )+ -> ^( PROG ( unit )+ ) )
			// ./src/VSLParser.g:20:7: ( unit )+
			{
			// ./src/VSLParser.g:20:7: ( unit )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==FUNC_KW||LA1_0==PROTO_KW) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ./src/VSLParser.g:20:7: unit
					{
					pushFollow(FOLLOW_unit_in_program113);
					unit2=unit();
					state._fsp--;

					stream_unit.add(unit2.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			// AST REWRITE
			// elements: unit
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 20:13: -> ^( PROG ( unit )+ )
			{
				// ./src/VSLParser.g:20:16: ^( PROG ( unit )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROG, "PROG"), root_1);
				if ( !(stream_unit.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_unit.hasNext() ) {
					adaptor.addChild(root_1, stream_unit.nextTree());
				}
				stream_unit.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class unit_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "unit"
	// ./src/VSLParser.g:23:1: unit : ( function | proto );
	public final VSLParser.unit_return unit() throws RecognitionException {
		VSLParser.unit_return retval = new VSLParser.unit_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope function3 =null;
		ParserRuleReturnScope proto4 =null;


		try {
			// ./src/VSLParser.g:24:5: ( function | proto )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==FUNC_KW) ) {
				alt2=1;
			}
			else if ( (LA2_0==PROTO_KW) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// ./src/VSLParser.g:24:7: function
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_function_in_unit140);
					function3=function();
					state._fsp--;

					adaptor.addChild(root_0, function3.getTree());

					}
					break;
				case 2 :
					// ./src/VSLParser.g:25:7: proto
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_proto_in_unit148);
					proto4=proto();
					state._fsp--;

					adaptor.addChild(root_0, proto4.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "unit"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// ./src/VSLParser.g:28:1: function : FUNC_KW type IDENT LP param_list RP statement -> ^( FUNC_KW type IDENT param_list ^( BODY statement ) ) ;
	public final VSLParser.function_return function() throws RecognitionException {
		VSLParser.function_return retval = new VSLParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token FUNC_KW5=null;
		Token IDENT7=null;
		Token LP8=null;
		Token RP10=null;
		ParserRuleReturnScope type6 =null;
		ParserRuleReturnScope param_list9 =null;
		ParserRuleReturnScope statement11 =null;

		Object FUNC_KW5_tree=null;
		Object IDENT7_tree=null;
		Object LP8_tree=null;
		Object RP10_tree=null;
		RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
		RewriteRuleTokenStream stream_RP=new RewriteRuleTokenStream(adaptor,"token RP");
		RewriteRuleTokenStream stream_FUNC_KW=new RewriteRuleTokenStream(adaptor,"token FUNC_KW");
		RewriteRuleTokenStream stream_LP=new RewriteRuleTokenStream(adaptor,"token LP");
		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
		RewriteRuleSubtreeStream stream_param_list=new RewriteRuleSubtreeStream(adaptor,"rule param_list");

		try {
			// ./src/VSLParser.g:29:5: ( FUNC_KW type IDENT LP param_list RP statement -> ^( FUNC_KW type IDENT param_list ^( BODY statement ) ) )
			// ./src/VSLParser.g:29:7: FUNC_KW type IDENT LP param_list RP statement
			{
			FUNC_KW5=(Token)match(input,FUNC_KW,FOLLOW_FUNC_KW_in_function165);  
			stream_FUNC_KW.add(FUNC_KW5);

			pushFollow(FOLLOW_type_in_function167);
			type6=type();
			state._fsp--;

			stream_type.add(type6.getTree());
			IDENT7=(Token)match(input,IDENT,FOLLOW_IDENT_in_function169);  
			stream_IDENT.add(IDENT7);

			LP8=(Token)match(input,LP,FOLLOW_LP_in_function171);  
			stream_LP.add(LP8);

			pushFollow(FOLLOW_param_list_in_function173);
			param_list9=param_list();
			state._fsp--;

			stream_param_list.add(param_list9.getTree());
			RP10=(Token)match(input,RP,FOLLOW_RP_in_function175);  
			stream_RP.add(RP10);

			pushFollow(FOLLOW_statement_in_function177);
			statement11=statement();
			state._fsp--;

			stream_statement.add(statement11.getTree());
			// AST REWRITE
			// elements: param_list, statement, FUNC_KW, type, IDENT
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 29:53: -> ^( FUNC_KW type IDENT param_list ^( BODY statement ) )
			{
				// ./src/VSLParser.g:29:56: ^( FUNC_KW type IDENT param_list ^( BODY statement ) )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_FUNC_KW.nextNode(), root_1);
				adaptor.addChild(root_1, stream_type.nextTree());
				adaptor.addChild(root_1, stream_IDENT.nextNode());
				adaptor.addChild(root_1, stream_param_list.nextTree());
				// ./src/VSLParser.g:29:89: ^( BODY statement )
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(BODY, "BODY"), root_2);
				adaptor.addChild(root_2, stream_statement.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class proto_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "proto"
	// ./src/VSLParser.g:32:1: proto : PROTO_KW ^ type IDENT LP ! param_list RP !;
	public final VSLParser.proto_return proto() throws RecognitionException {
		VSLParser.proto_return retval = new VSLParser.proto_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token PROTO_KW12=null;
		Token IDENT14=null;
		Token LP15=null;
		Token RP17=null;
		ParserRuleReturnScope type13 =null;
		ParserRuleReturnScope param_list16 =null;

		Object PROTO_KW12_tree=null;
		Object IDENT14_tree=null;
		Object LP15_tree=null;
		Object RP17_tree=null;

		try {
			// ./src/VSLParser.g:33:5: ( PROTO_KW ^ type IDENT LP ! param_list RP !)
			// ./src/VSLParser.g:33:7: PROTO_KW ^ type IDENT LP ! param_list RP !
			{
			root_0 = (Object)adaptor.nil();


			PROTO_KW12=(Token)match(input,PROTO_KW,FOLLOW_PROTO_KW_in_proto213); 
			PROTO_KW12_tree = (Object)adaptor.create(PROTO_KW12);
			root_0 = (Object)adaptor.becomeRoot(PROTO_KW12_tree, root_0);

			pushFollow(FOLLOW_type_in_proto216);
			type13=type();
			state._fsp--;

			adaptor.addChild(root_0, type13.getTree());

			IDENT14=(Token)match(input,IDENT,FOLLOW_IDENT_in_proto218); 
			IDENT14_tree = (Object)adaptor.create(IDENT14);
			adaptor.addChild(root_0, IDENT14_tree);

			LP15=(Token)match(input,LP,FOLLOW_LP_in_proto220); 
			pushFollow(FOLLOW_param_list_in_proto223);
			param_list16=param_list();
			state._fsp--;

			adaptor.addChild(root_0, param_list16.getTree());

			RP17=(Token)match(input,RP,FOLLOW_RP_in_proto225); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "proto"


	public static class type_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type"
	// ./src/VSLParser.g:36:1: type : ( INT_KW ^| VOID_KW ^);
	public final VSLParser.type_return type() throws RecognitionException {
		VSLParser.type_return retval = new VSLParser.type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token INT_KW18=null;
		Token VOID_KW19=null;

		Object INT_KW18_tree=null;
		Object VOID_KW19_tree=null;

		try {
			// ./src/VSLParser.g:37:5: ( INT_KW ^| VOID_KW ^)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==INT_KW) ) {
				alt3=1;
			}
			else if ( (LA3_0==VOID_KW) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// ./src/VSLParser.g:37:7: INT_KW ^
					{
					root_0 = (Object)adaptor.nil();


					INT_KW18=(Token)match(input,INT_KW,FOLLOW_INT_KW_in_type243); 
					INT_KW18_tree = (Object)adaptor.create(INT_KW18);
					root_0 = (Object)adaptor.becomeRoot(INT_KW18_tree, root_0);

					}
					break;
				case 2 :
					// ./src/VSLParser.g:38:7: VOID_KW ^
					{
					root_0 = (Object)adaptor.nil();


					VOID_KW19=(Token)match(input,VOID_KW,FOLLOW_VOID_KW_in_type253); 
					VOID_KW19_tree = (Object)adaptor.create(VOID_KW19);
					root_0 = (Object)adaptor.becomeRoot(VOID_KW19_tree, root_0);

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class param_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "param_list"
	// ./src/VSLParser.g:41:1: param_list : ( param ( COM param )* -> ^( PARAM ( param )* ) | -> ^( PARAM ) );
	public final VSLParser.param_list_return param_list() throws RecognitionException {
		VSLParser.param_list_return retval = new VSLParser.param_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token COM21=null;
		ParserRuleReturnScope param20 =null;
		ParserRuleReturnScope param22 =null;

		Object COM21_tree=null;
		RewriteRuleTokenStream stream_COM=new RewriteRuleTokenStream(adaptor,"token COM");
		RewriteRuleSubtreeStream stream_param=new RewriteRuleSubtreeStream(adaptor,"rule param");

		try {
			// ./src/VSLParser.g:42:5: ( param ( COM param )* -> ^( PARAM ( param )* ) | -> ^( PARAM ) )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==IDENT) ) {
				alt5=1;
			}
			else if ( (LA5_0==RP) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// ./src/VSLParser.g:42:7: param ( COM param )*
					{
					pushFollow(FOLLOW_param_in_param_list271);
					param20=param();
					state._fsp--;

					stream_param.add(param20.getTree());
					// ./src/VSLParser.g:42:13: ( COM param )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==COM) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// ./src/VSLParser.g:42:14: COM param
							{
							COM21=(Token)match(input,COM,FOLLOW_COM_in_param_list274);  
							stream_COM.add(COM21);

							pushFollow(FOLLOW_param_in_param_list276);
							param22=param();
							state._fsp--;

							stream_param.add(param22.getTree());
							}
							break;

						default :
							break loop4;
						}
					}

					// AST REWRITE
					// elements: param
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 42:26: -> ^( PARAM ( param )* )
					{
						// ./src/VSLParser.g:42:29: ^( PARAM ( param )* )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PARAM, "PARAM"), root_1);
						// ./src/VSLParser.g:42:37: ( param )*
						while ( stream_param.hasNext() ) {
							adaptor.addChild(root_1, stream_param.nextTree());
						}
						stream_param.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// ./src/VSLParser.g:43:7: 
					{
					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 43:7: -> ^( PARAM )
					{
						// ./src/VSLParser.g:43:10: ^( PARAM )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PARAM, "PARAM"), root_1);
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "param_list"


	public static class param_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "param"
	// ./src/VSLParser.g:46:1: param : ( IDENT | IDENT LB RB -> ^( ARRAY IDENT ) );
	public final VSLParser.param_return param() throws RecognitionException {
		VSLParser.param_return retval = new VSLParser.param_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IDENT23=null;
		Token IDENT24=null;
		Token LB25=null;
		Token RB26=null;

		Object IDENT23_tree=null;
		Object IDENT24_tree=null;
		Object LB25_tree=null;
		Object RB26_tree=null;
		RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
		RewriteRuleTokenStream stream_LB=new RewriteRuleTokenStream(adaptor,"token LB");
		RewriteRuleTokenStream stream_RB=new RewriteRuleTokenStream(adaptor,"token RB");

		try {
			// ./src/VSLParser.g:47:5: ( IDENT | IDENT LB RB -> ^( ARRAY IDENT ) )
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==IDENT) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==LB) ) {
					alt6=2;
				}
				else if ( (LA6_1==COM||LA6_1==RP) ) {
					alt6=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// ./src/VSLParser.g:47:7: IDENT
					{
					root_0 = (Object)adaptor.nil();


					IDENT23=(Token)match(input,IDENT,FOLLOW_IDENT_in_param316); 
					IDENT23_tree = (Object)adaptor.create(IDENT23);
					adaptor.addChild(root_0, IDENT23_tree);

					}
					break;
				case 2 :
					// ./src/VSLParser.g:48:7: IDENT LB RB
					{
					IDENT24=(Token)match(input,IDENT,FOLLOW_IDENT_in_param324);  
					stream_IDENT.add(IDENT24);

					LB25=(Token)match(input,LB,FOLLOW_LB_in_param326);  
					stream_LB.add(LB25);

					RB26=(Token)match(input,RB,FOLLOW_RB_in_param328);  
					stream_RB.add(RB26);

					// AST REWRITE
					// elements: IDENT
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 48:19: -> ^( ARRAY IDENT )
					{
						// ./src/VSLParser.g:48:22: ^( ARRAY IDENT )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARRAY, "ARRAY"), root_1);
						adaptor.addChild(root_1, stream_IDENT.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "param"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// ./src/VSLParser.g:51:1: statement : ( IDENT ASSIGN_KW expression -> ^( ASSIGN_KW expression IDENT ) | array_elem ASSIGN_KW expression -> ^( ASSIGN_KW expression array_elem ) | RETURN_KW ^ expression | PRINT_KW ^ print_list | READ_KW ^ read_list | IF_KW ^ expression THEN_KW ! statement ( ELSE_KW ! statement )? FI_KW !| WHILE_KW ^ expression DO_KW ! statement OD_KW !| IDENT LP ( argument_list )? RP -> ^( FCALL_S IDENT ( argument_list )? ) | block );
	public final VSLParser.statement_return statement() throws RecognitionException {
		VSLParser.statement_return retval = new VSLParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IDENT27=null;
		Token ASSIGN_KW28=null;
		Token ASSIGN_KW31=null;
		Token RETURN_KW33=null;
		Token PRINT_KW35=null;
		Token READ_KW37=null;
		Token IF_KW39=null;
		Token THEN_KW41=null;
		Token ELSE_KW43=null;
		Token FI_KW45=null;
		Token WHILE_KW46=null;
		Token DO_KW48=null;
		Token OD_KW50=null;
		Token IDENT51=null;
		Token LP52=null;
		Token RP54=null;
		ParserRuleReturnScope expression29 =null;
		ParserRuleReturnScope array_elem30 =null;
		ParserRuleReturnScope expression32 =null;
		ParserRuleReturnScope expression34 =null;
		ParserRuleReturnScope print_list36 =null;
		ParserRuleReturnScope read_list38 =null;
		ParserRuleReturnScope expression40 =null;
		ParserRuleReturnScope statement42 =null;
		ParserRuleReturnScope statement44 =null;
		ParserRuleReturnScope expression47 =null;
		ParserRuleReturnScope statement49 =null;
		ParserRuleReturnScope argument_list53 =null;
		ParserRuleReturnScope block55 =null;

		Object IDENT27_tree=null;
		Object ASSIGN_KW28_tree=null;
		Object ASSIGN_KW31_tree=null;
		Object RETURN_KW33_tree=null;
		Object PRINT_KW35_tree=null;
		Object READ_KW37_tree=null;
		Object IF_KW39_tree=null;
		Object THEN_KW41_tree=null;
		Object ELSE_KW43_tree=null;
		Object FI_KW45_tree=null;
		Object WHILE_KW46_tree=null;
		Object DO_KW48_tree=null;
		Object OD_KW50_tree=null;
		Object IDENT51_tree=null;
		Object LP52_tree=null;
		Object RP54_tree=null;
		RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
		RewriteRuleTokenStream stream_ASSIGN_KW=new RewriteRuleTokenStream(adaptor,"token ASSIGN_KW");
		RewriteRuleTokenStream stream_RP=new RewriteRuleTokenStream(adaptor,"token RP");
		RewriteRuleTokenStream stream_LP=new RewriteRuleTokenStream(adaptor,"token LP");
		RewriteRuleSubtreeStream stream_argument_list=new RewriteRuleSubtreeStream(adaptor,"rule argument_list");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
		RewriteRuleSubtreeStream stream_array_elem=new RewriteRuleSubtreeStream(adaptor,"rule array_elem");
